# household-expenses

./: .gitignore  README.md  main.py  pyproject.toml
scripts/: fetch.py  glance.py
