[tool.poetry]
name = "household-expenses"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
gspread = "^4.0.1"
numpy = "^1.21.2"
pandas = "^1.3.2"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
jupyterlab = "^3.1.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
